--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     margin: 0px;
 }
 
-#hero {
+.hero {
     background-image: url("/images/old-tucson.jpg");
     background-size: cover;
     margin: 0px;
@@ -23,14 +23,14 @@ body {
     margin-bottom: 0px;
 }
 
-#page-title {
+.page-title {
     background: #404E7C;
     margin-top: 150px;
     border-radius: 10px;
     padding: 3px 6px;
 }
 
-#page-description {
+.page-description {
     background: #404E7C;
     margin-top: 50px;
     border-radius: 10px;
@@ -48,7 +48,7 @@ body {
     padding-bottom: 150px;
 }
 
-#section-header-1 {
+.section-header-1 {
     margin: 0px auto 75px auto;
     padding-top: 15px;
 }
@@ -76,7 +76,7 @@ body {
     margin: 10px 10px;
 }
 
-#info-box {
+.info-box {
     width: 225px;
     min-height: 450px;
 }
@@ -93,12 +93,12 @@ body {
     border-radius: 10px;
 }
 
-#guide-picture {
+.guide-picture {
     width: 150px;
     max-height: 225px;
     border-radius: 10px;
 }
 
-#content-quote {
+.content-quote {
     font-size: 14px;
 }
