--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     font-family: 'Tillana', cursive;
     text-align : center;
     margin: 0px;
-    overscroll-behavior: none;
+    overflow: hidden;
 }
 
 .hero {
