--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Tillana', cursive;
     text-align : center;
     margin: 0px;
+    height: 100%;
     overflow: hidden;
 }
 
