--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     text-align : center;
     margin: 0px;
     height: 100%;
-    overflow: hidden;
+    overscroll-behavior: none;
 }
 
 .hero {
